# aoc2022

./: README.md  aoc2022.cabal
src/: Day1.hs  Day2.hs  Day3.hs  Day4.hs  Day5.hs  Day6.hs
